apps/slskd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slskd
  namespace: slskd
spec:
  selector:
    matchLabels:
      app: slskd
  template:
    metadata:
      labels:
        app: slskd
    spec:
      containers:
      - name: slskd
        image: slskd/slskd
        securityContext:
          runAsUser: 1001
          runAsGroup: 1001
        resources:
          limits:
            memory: "2048Mi"
            cpu: "2.0"
        ports:
        - containerPort: 5030
        - containerPort: 5031
        - containerPort: 50300
        volumeMounts:
          - name: music
            mountPath:  /music
          - name: downloads
            mountPath: /app/downloads
      volumes:
        - name: music
          nfs:
            server: storage-pve-02.int.prossertech.com
            path: /data/media/Music
        - name: downloads
          nfs: 
            server: storage-pve-02.int.prossertech.com
            path: /data/media/slskd
---
kind: Service
apiVersion: v1
metadata:
  name:  slskd-svc
  namespace: slskd
spec:
  selector:
    app:  slskd
  ports:
  - name:  http
    port:  80
    targetPort:  5030
  - name: https 
    port: 443
    targetPort: 5031
  - name: slskd
    port: 50300
    targetPort: 50300
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slskd-ingress
  labels:
    name: slskd-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  #   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: slskd.talos.prossertech.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: slskd-svc
            port: 
              name: http
